1.2.0 () -
- #2      Generate a warning when a new tag is used on the command line
- #9      Add an 'undo' command (TI-1)
- #21     Add/Remove tag to/from current activity (TI-13)
          (thanks to lumbric)
- #68     Add annotations to time intervals (TI-63)
- #77     Support non-tag interval data storage (TI-72)
          (thanks to Tomas Babej)
- #98     Command Injection Security Vulnerability in on-modify.timewarrior (TI-94)
          (thanks to Aaron Fields)
- #101    timew assertion error on delete (TI-97)
          (thanks to janikrabe)
- #104    :lastquarter throws exception in first quarter (TI-100)
          (thanks to Andreas Poisel)
- #105    Keeps tracking renamed and stopped task (TI-101)
          (thanks to Antanas B.)
- #111    Some tests fail depending on the time of day
          (thanks to chronitis)
- #113    summary does not display correctly open intervals spanning day border
          (thanks to janikrabe)
- #135    Task at month end not getting displayed
          (thanks to towo)
- #138    Entering an escaped quote in a tag name causes incorrect JSON to be generated
          (thanks to bognolo)
- #157    CLI: Ensure IDs are non-zero
          (thanks to janikrabe)
- #165    CmdSummary does not show empty intervals at midnight
          (thanks to janikrabe)
- #166    getTracked behaves incorrectly when latest interval is empty
          (thanks to janikrabe)
- #167    Cannot shorten interval to zero length
          (thanks to janikrabe)
- #174    Interval is split in two when it encloses month border
- #183    Hyphen in annotation gets padded with spaces
-         Fixed error from totals.py while timer is active
          (thanks to davisdude)
-         Refactoring of Interval and Range

------ current release ---------------------------

1.1.1 (2018-02-03) ef26ebd6fec8472d4b91644806f48b546bb35747

- TI-76   Shortening an interval over an exclusion makes the exclusion no longer apply
          (thanks to A M)