@@ -68,3 +68,4 @@ Thanks to the following, who submitted detailed bug reports and excellent sugges
   lumbric
   Antanas B.
   towo
+  sclo
